added some changes to scripts

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
       <label for="chartTypes">Chart Style</label>
 
       <select name="chartTypes" id="chartTypes">
-        <option value="Bar" selected>Bar</option>
-        <option value="Pie" >Pie</option>
+        <option value="horizontalBar" selected>Bar</option>
+        <option value="pie" >Pie</option>
         
       </select>
     </div>
