changed dropdown value types

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
       <label for="chartTypes">Chart Style</label>
 
       <select name="chartTypes" id="chartTypes">
-        <option value="horizontalBar" selected>Bar</option>
-        <option value="pie" >Pie</option>
+        <option value="year" selected>Year</option>
+        <option value="month" >Month</option>
         
       </select>
     </div>
