--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <!-- chart element -->
   <div class="chartContainer">
     <div class="chartDropDown">
-      <label for="chartTypes">Chart Style</label>
+      <label for="chartTypes">Chart Range</label>
 
       <select name="chartTypes" id="chartTypes">
         <option value="year" selected>Year</option>
